--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"spanish-verbs": "^3.3.0"
+	}
 }
